CMAKE_MINIMUM_REQUIRED (VERSION 3.8)
PROJECT (APITest)
ADD_EXECUTABLE (api_tutorial main.cpp)
FIND_PACKAGE (CURL)
TARGET_LINK_LIBRARIES (api_tutorial ${CURL_LIBRARIES})
INCLUDE ("${CMAKE_SOURCE_DIR}/rapidjson/1.1.0/lib/cmake/RapidJSON/RapidJSONConfig.cmake")
INCLUDE ("${CMAKE_SOURCE_DIR}/rapidjson/1.1.0/lib/cmake/RapidJSON/RapidJSONConfigVersion.cmake")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/rapidjson/1.1.0/include")
INCLUDE_DIRECTORIES ("${CMAKE_SOURCE_DIR}/curlpp/0.8.1/include")
FILE (GLOB CURLPP_LIBRARIES "${CMAKE_SOURCE_DIR}/curlpp/0.8.1/lib/*.dylib")
TARGET_LINK_LIBRARIES (api_tutorial ${CURLPP_LIBRARIES})
SET_PROPERTY (TARGET api_tutorial PROPERTY CXX_STANDARD 14)
